--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-    "name": "malus-app",
-    "version": "0.1.0",
-    "homepage": "./",
-    "private": true,
-    "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
-    },
-    "dependencies": {
-      "@emotion/react": "^11.10.6",
-      "@emotion/styled": "^11.10.6",
-      "@mui/icons-material": "^5.11.16",
-      "@mui/material": "^5.11.10",
-      "@mui/styles": "^5.13.2",
-      "@rainbow-me/rainbowkit": "^0.11.0",
-      "classnames": "^2.3.2",
-      "eslint": "8.30.0",
-      "eslint-config-next": "13.0.7",
-      "ethers": "^5.5.1",
-      "next": "13.0.7",
-      "next-auth": "^4.19.2",
-      "react": "18.2.0",
-      "react-alert": "^7.0.3",
-      "react-async-hook": "^4.0.0",
-      "react-dom": "^18.2.0",
-      "react-focus-lock": "^2.9.2",
-      "react-helmet": "^6.1.0",
-      "react-loading": "^2.0.3",
-      "react-router-dom": "^6.9.0",
-      "react-spring": "^9.7.1",
-      "styled-components": "^5.3.6",
-      "wagmi": "^0.11.7"
-    },
-    "devDependencies": {
-      "autoprefixer": "^10.4.13",
-      "postcss": "^8.4.21",
-      "tailwindcss": "^3.2.7"
-    }
+  "name": "malus-app",
+  "version": "0.1.0",
+  "homepage": "./",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.10",
+    "@mui/styles": "^5.13.2",
+    "@rainbow-me/rainbowkit": "^0.11.0",
+    "classnames": "^2.3.2",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.0.7",
+    "ethers": "^5.5.1",
+    "is-mobile": "^4.0.0",
+    "next": "13.0.7",
+    "next-auth": "^4.19.2",
+    "react": "18.2.0",
+    "react-alert": "^7.0.3",
+    "react-async-hook": "^4.0.0",
+    "react-dom": "^18.2.0",
+    "react-focus-lock": "^2.9.2",
+    "react-helmet": "^6.1.0",
+    "react-loading": "^2.0.3",
+    "react-router-dom": "^6.9.0",
+    "react-spring": "^9.7.1",
+    "styled-components": "^5.3.6",
+    "wagmi": "^0.11.7"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
+}
