--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.9.0",
     "react-spring": "^9.7.1",
     "styled-components": "^5.3.6",
+    "ua-parser-js": "^1.0.35",
     "wagmi": "^0.11.7"
   },
   "devDependencies": {
