--- a/package.json
+++ b/package.json
@@ -22,16 +22,12 @@
     "eslint-config-next": "13.0.7",
     "ethers": "^5.5.1",
     "is-mobile": "^4.0.0",
-    "next": "13.3.1",
-    "next-auth": "^4.19.2",
+    "next": "^14.0.4",
     "react": "18.2.0",
-    "react-alert": "^7.0.3",
-    "react-async-hook": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.2",
     "react-helmet": "^6.1.0",
     "react-loading": "^2.0.3",
-    "react-router-dom": "^6.9.0",
     "react-spring": "^9.7.1",
     "styled-components": "^5.3.6",
     "ua-parser-js": "^1.0.35",
@@ -39,9 +35,5 @@
     "viem": "^1.10.9",
     "wagmi": "^1.4.1"
   },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
-  }
+  "devDependencies": {}
 }
